# GstreamerBasics

./: CMakeLists.txt  README.md
artifacts/: rtsp-simple-server.yml  rtsp_client
include/: common.h  rtsp_client.h  rtsp_worker.h
include/plugins/: gstbackgroundsub.h
src/: main.cpp  rtsp_client.cpp  rtsp_worker.cpp
src/plugins/: gstbackgroundsub.cpp
